# PawnPro-Debugger

./: CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: ci.yml  release.yml
crates/amxdbg/: Cargo.toml
crates/amxdbg/src/: lib.rs
crates/dap-adapter/: Cargo.toml
crates/dap-adapter/src/: main.rs  messages.rs  plugin_client.rs  protocol.rs  session.rs
crates/debug-plugin/: Cargo.toml
crates/debug-plugin/src/: bridge.rs  control.rs  gate.rs  hook.rs  inspect.rs  lib.rs  runtime_error.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  transport.rs
docs/: architecture.md  features.md  getting-started.md  index.md  runtime-errors.md
