[package]
name = "dap-adapter"
description = "Adaptador Debug Adapter Protocol (DAP) — fala DAP com o editor e protocolo próprio com o plugin."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dap-adapter"
path = "src/main.rs"

[dependencies]
rust-samp-sdk = { git = "https://github.com/NullSablex/rust-samp", rev = "e5b5fc1", default-features = false, features = ["debug"] }
pawnpro-dbg-protocol = { path = "../protocol" }
interprocess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
