[package]
name = "debug-plugin"
description = "Plugin do servidor SA-MP/open.mp: debug hook, breakpoint, step, inspeção de memória."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pawnpro-dbg-protocol = { path = "../protocol" }
interprocess = "2"
# Crate de alto nível: ciclo de vida do plugin (initialize_plugin!, SampPlugin),
# o wrapper Amx (acessores de VM + read/write cell + debug hook) e, com a feature
# `debug`, o parser AMX_DBG em `samp::debug`. Importável como `samp`.
# Pinado por SHA no fork (sdk 3.2.0, expõe read_code/pri/alt/opcode_table via
# prelude). Trocar por `version = "3.2"` quando publicado no crates.io.
samp = { package = "rust-samp", git = "https://github.com/NullSablex/rust-samp", rev = "98b4143b0b9f56b95dbce1c51394198e553e255a", features = ["debug"] }

[package.metadata.samp]
uid = "0x0d9107bbd31c8d1b"
