[package]
name = "debug-plugin"
description = "Plugin do servidor SA-MP/open.mp: debug hook, breakpoint, step, inspeção de memória."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pawnpro-dbg-protocol = { path = "../protocol" }
interprocess = "2"
samp = { package = "rust-samp", git = "https://github.com/NullSablex/rust-samp", rev = "e5b5fc1", features = ["debug"] }

[package.metadata.samp]
uid = "0x0d9107bbd31c8d1b"
