[package]
name = "pawnpro-dbg-protocol"
description = "Protocolo próprio entre o plugin (no servidor) e o adaptador DAP — comandos e eventos em NDJSON sobre TCP."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Socket local cross-platform: Unix socket (Linux/macOS) + named pipe (Windows),
# numa API única. Substitui o TCP-localhost do IPC plugin↔adaptador.
interprocess = "2"
